change router links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     Angular Version: {{ngVersion}}
 </p>
 <div>
-    <a routerLink="mfe2/a">Route A</a> |
-    <a routerLink="mfe2/b">Route B</a>
+    <a routerLink="angular3/a">Route A</a> |
+    <a routerLink="angular3/b">Route B</a>
 </div>
 
 <router-outlet></router-outlet>
