--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>
-    Angular C
+    Angular C (with Routing)
     <img src="https://angular.io/assets/images/logos/angular/angular.svg" width="30">
 </h1>
 <p>
